--- a/kubernetes/docs/en/exposing/sayhello-service-clusterip.yaml
+++ b/kubernetes/docs/en/exposing/sayhello-service-clusterip.yaml
@@ -6,7 +6,8 @@ spec:
   selector:
     app: sayhello
   ports:
-  - protocol: TCP
+  - name: webport
+    protocol: TCP
     port: 80
     targetPort: 8080
   type: ClusterIP
