--- a/kubernetes/docs/en/exposing/sayhello-service-for-ingress.yaml
+++ b/kubernetes/docs/en/exposing/sayhello-service-for-ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sayhello-service-nodeport
+  name: sayhello-service-for-ingress
 spec:
   selector:
     app: sayhello
@@ -12,5 +12,5 @@ spec:
     port: 80
     # targetPort: Deployed Container's Port = containerPort
     targetPort: 8080
-  ################ ClusterIP -> NodePort
+  ################ NodePort
   type: NodePort
