--- a/kubernetes/apps/kfserving/examples/brain/restful/Dockerfile
+++ b/kubernetes/apps/kfserving/examples/brain/restful/Dockerfile
@@ -1,6 +1,9 @@
 FROM microorganism:v0.1
 
-RUN mkdir -p /models
+ENV MODEL_BASE_PATH=/models
+RUN mkdir -p ${MODEL_BASE_PATH}
+ENV MODEL_NAME=model
+
 WORKDIR /tmp/skipc_microorganism_detection_model
 
 RUN pip install \
@@ -9,8 +12,20 @@ RUN pip install \
 COPY __init__.py /tmp/skipc_microorganism_detection_model/modai/__init__.py
 COPY model.py /tmp/skipc_microorganism_detection_model/
 COPY runserver.py /tmp/skipc_microorganism_detection_model/
-COPY init_entrypoint.sh /usr/local/bin/
+# COPY init_entrypoint.sh /usr/local/bin/
 
-RUN chmod u+x /usr/local/bin/init_entrypoint.sh
-EXPOSE 8501
+COPY frozen_inference_graph.pb /models/microorganism
+
+# RUN chmod u+x /usr/local/bin/init_entrypoint.sh
+EXPOSE 8500 8501
+
+# https://github.com/tensorflow/serving/blob/master/tensorflow_serving/tools/docker/Dockerfile
+# Create a script that runs the model server so we can use environment variables
+# while also passing in arguments from the docker command line
+RUN echo '#!/bin/bash \n\n\
+    python runserver.py --port=8500 --rest_api_port=8501 \
+    --model_name=${MODEL_NAME} --model_base_path=${MODEL_BASE_PATH}/${MODEL_NAME} \
+    "$@"' > /usr/local/bin/init_entrypoint.sh \
+    && chmod +x /usr/local/bin/init_entrypoint.sh
+
 ENTRYPOINT ["init_entrypoint.sh"]
