--- a/kubernetes/apps/kfserving/gpu_accelerators/microorganism_custom_gpu.yaml
+++ b/kubernetes/apps/kfserving/gpu_accelerators/microorganism_custom_gpu.yaml
@@ -2,14 +2,16 @@ apiVersion: "serving.kubeflow.org/v1alpha2"
 kind: "InferenceService"
 metadata:
   controller-tools.k8s.io: "1.0"
-  name: microorganism
+  name: microorganism-gpu
   namespace: default
 spec:
   default:
     predictor:
       custom:
+        nodeSelector:
+          cloud.google.com/gke-accelerator: nvidia-tesla-t4  # or nvidia-tesla-p100 or nvidia-tesla-p4 or nvidia-tesla-v100 or nvidia-tesla-k80
         container:
-          image: gcr.io/ds-ai-platform/microorganism:v0.1.0-http
+          image: gcr.io/ds-ai-platform/microorganism:v0.1.0-http-gpu
           name: kfserving-container
           env:
             - name: MODEL_NAME
@@ -29,8 +31,6 @@ spec:
             requests:
               cpu: 2
               memory: 4Gi
-        nodeSelector:
-          cloud.google.com/gke-accelerator: nvidia-tesla-t4  # or nvidia-tesla-p100 or nvidia-tesla-p4 or nvidia-tesla-v100 or nvidia-tesla-k80
 
 #
 # kubectl get kpa -o yaml
