--- a/kubernetes/apps/prometheus-and-grafana/expose-istio-grafana-http.yaml
+++ b/kubernetes/apps/prometheus-and-grafana/expose-istio-grafana-http.yaml
@@ -32,6 +32,29 @@ spec:
         host: grafana
         port:
           number: 3000
+# apiVersion: networking.istio.io/v1alpha3
+# kind: VirtualService
+# metadata:
+#   name: grafana-vs
+#   namespace: istio-system
+# spec:
+#   hosts:
+#   - "*"
+#   gateways:
+#   - grafana-gateway
+#   http:
+#   - match:
+#     - method:
+#         exact: GET
+#       uri:
+#         prefix: /istio/grafana/
+#     rewrite:
+#       uri: /
+#     route:
+#     - destination:
+#         host: grafana.istio-system.svc.cluster.local
+#         port:
+#           number: 3000
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: DestinationRule
